/**
 * @file BaseNode.hpp
 * @author your name (you@domain.com)
 * @brief
 * @version 0.1
 * @date 2026-06-30
 *
 * @copyright Copyright (c) 2026
 *
 */
#pragma once

// STL Dependencies
#include <csignal>
#include <thread>

// Standard Messages
#include <robot_framework_ros/diagnostic.h>
#include <robot_framework_ros/heartbeat.h>
#include <robot_framework_ros/nodestate.h>
#include <robot_framework_ros/ready_to_arm.h>

#include <DiagnosticMsg.hpp>
#include <ReadyToArmStatusMsg.hpp>

// ROS Dependencies

#include "ros/ros.h"

namespace fast::rf_ros {
    /**
     * @brief BaseNode, all other Nodes should inherit from this
     *
     */
    class BaseNode {
       public:
        static constexpr double WARN_LOOPRATE_SLOWDOWN_FACTOR =
            1.5;  //!< Loops running at a rate slower than this will trigger a WARN diagnostic.
        static constexpr double ERROR_LOOPRATE_SLOWDOWN_FACTOR =
            3.0;  //!< Loops running at a rate slower than this will trigger an ERROR diagnostic.
        BaseNode() : n(new ros::NodeHandle("~")) {
            node_state.state = robot_framework_ros::nodestate::STATE_UNKNOWN;
            max_rate = ros_rate / 10.0;  // Max rate is 400 Hz
        }
        virtual ~BaseNode() = default;
        // Initialization Functions

        // Node Lifecycle Functions
        /**
         * @brief Initialize Base Node.
         *
         * @return true
         * @return false
         */
        bool base_init();

        /**
         * @brief
         *
         * @return true
         * @return false
         */
        virtual bool init() = 0;

        /**
         * @brief Load Configuration
         *
         * @return true
         * @return false
         */
        virtual bool load_config() = 0;

        /**
         * @brief Start Base Node.  Should be called AFTER User runs `init`.
         *
         * @return true
         * @return false
         */
        bool base_start();

        /**
         * @brief Start the Node.  Should be called AFTER User runs `init`.
         *
         * @return true
         * @return false
         */
        virtual bool start() = 0;

        /**
         * @brief Restart the Node.
         *
         * @return true
         * @return false
         */
        bool base_restart();

        /**
         * @brief Base Node 100Hz Loop.
         *
         * @return true
         * @return false
         */
        bool base_run_100hz();

        /**
         * @brief Base Node 10Hz Loop.
         *
         * @return true
         * @return false
         */
        bool base_run_10hz();

        /**
         * @brief Base Node 1Hz Loop.
         *
         * @return true
         * @return false
         */
        bool base_run_1hz();

        /**
         * @brief Base Node 0.1Hz Loop.
         *
         * @return true
         * @return false
         */
        bool base_run_01hz();

        /**
         * @brief Base Node 0.01Hz Loop.
         *
         * @return true
         * @return false
         */
        bool base_run_001hz();

        // Required User Node Implementation Functions for Loops
        /**
         * @brief Gets called automatically to run at 100 Hz.
         *
         * @return true
         * @return false
         */
        virtual bool run_100hz() = 0;

        /**
         * @brief Gets called automatically to run at 10 Hz.
         *
         * @return true
         * @return false
         */
        virtual bool run_10hz() = 0;

        /**
         * @brief Gets called automatically to run at 1 Hz.
         *
         * @return true
         * @return false
         */
        virtual bool run_1hz() = 0;

        /**
         * @brief Gets called automatically to run at 0.1 Hz.
         *
         * @return true
         * @return false
         */
        virtual bool run_01hz() = 0;

        /**
         * @brief Gets called automatically to run at 0.01 Hz.
         *
         * @return true
         * @return false
         */
        virtual bool run_001hz() = 0;

        /**
         * @brief User defined Loop, runs at user-defined rate.  This is called automatially at the set rate.
         *
         * @return true
         * @return false
         */

        virtual bool run_loop1() = 0;

        /**
         * @brief User defined Loop, runs at user-defined rate.  This is called automatially at the set rate.
         *
         * @return true
         * @return false
         */
        virtual bool run_loop2() = 0;

        /**
         * @brief User defined Loop, runs at user-defined rate.  This is called automatially at the set rate.
         *
         * @return true
         * @return false
         */
        virtual bool run_loop3() = 0;

        /**
         * @brief Update function that main function should call.
         * @details triggers all other timing loops
         *
         * @return true
         * @return false
         */
        bool update();

        /**
         * @brief Get the node state object
         *
         * @return robot_framework_ros::nodestate
         */
        robot_framework_ros::nodestate get_node_state() { return node_state; }

        /**
         * @brief Get a string representation of the node
         *
         * @return std::string
         */
        std::string pretty();

        // Namespace Stuff

        /**
         * @brief Read Robot Namespace
         *
         * @return std::string
         */
        std::string read_robotnamespace();

        std::string read_base_nodename();

        /**
         * @brief Set the robotnamespace object
         *
         * @param _robot_namespace
         */
        void set_robotnamespace(std::string _robot_namespace) {
            robot_namespace = validate_robotnamespace(_robot_namespace);
        }

        /**
         * @brief Get the robotnamespace object
         *
         * @return std::string
         */
        std::string get_robotnamespace() { return robot_namespace; }

        /**
         * @brief Get the nodename object
         *
         * @return std::string
         */
        std::string get_nodename() { return node_name; }

        std::string get_config_path(std::string system_id_str, std::string subsystem_id_str,
                                    std::string process_id_str);
        /**
         * @brief Validate Robot Namespace
         *
         * @param str
         * @return std::string
         */
        static std::string validate_robotnamespace(std::string str);

       protected:
        /**
         * @brief Set the diagnostics object
         *
         * @param diagnostics
         */
        void set_diagnostics(std::vector<fast::rf::messages::InfrastructureMsgs::DiagnosticMsg> diagnostics) {
            diagnostics_ = diagnostics;
        }
        /**
         * @brief Set the ready to arm object
         *
         * @param ready_to_arm
         */
        void set_ready_to_arm(fast::rf::messages::InfrastructureMsgs::ReadyToArmStatusMsg ready_to_arm) {
            ready_to_arm_ = ready_to_arm;
        }
        bool initBaseNodeDiagnostics(uint8_t systemId, uint8_t subSystemId, uint8_t processId);
        std::map<fast::rf::DiagnosticDefinition::DiagnosticType, fast::rf::messages::InfrastructureMsgs::DiagnosticMsg>
        getBaseNodeDiagnostics() {
            return m_baseNodeDiagnostics;
        }

        boost::shared_ptr<ros::NodeHandle> n;  //!< Node Handle

        // Concrete Node Controls

       private:
        /**
         * @brief Checks Timing Diagnostic
         *
         * @param loopName
         * @param runTimeSec
         * @param cycleCount
         * @param expectedRate
         * @return true if no error
         * @return false if a warn or an error was found in the timing analysis
         */
        bool checkTimingDiagnostic(std::string loopName, double runTimeSec, uint64_t cycleCount, double expectedRate);

        ros::Time startTime;
        bool ready_to_arm_publish_enabled{true};
        robot_framework_ros::nodestate node_state;
        std::string node_namespace{""};
        std::string node_name{""};
        std::string robot_namespace{"/"};
        double loop1_rate{-1.0};
        bool loop1_enabled{true};

        double loop2_rate{-1.0};
        bool loop2_enabled{true};

        double loop3_rate{-1.0};
        bool loop3_enabled{true};

        bool request_node_statechange(uint8_t new_state, bool override = false);
        ros::Publisher heartbeat_pub;
        ros::Publisher diagnostic_pub;
        ros::Publisher ready_to_arm_pub;

        double ros_rate{4000.0};
        double max_rate;

        ros::Time last_100hz_timer;
        uint64_t m_loop100HzCycles{0};
        ros::Time last_10hz_timer;
        uint64_t m_loop10HzCycles{0};
        ros::Time last_1hz_timer;
        uint64_t m_loop1HzCycles{0};
        ros::Time last_01hz_timer;
        uint64_t m_loop01HzCycles{0};
        ros::Time last_001hz_timer;
        uint64_t m_loop001HzCycles{0};
        ros::Time last_loop1_timer;
        uint64_t m_loop1Cycles{0};
        ros::Time last_loop2_timer;
        uint64_t m_loop2Cycles{0};
        ros::Time last_loop3_timer;
        uint64_t m_loop3Cycles{0};

        std::map<fast::rf::DiagnosticDefinition::DiagnosticType, fast::rf::messages::InfrastructureMsgs::DiagnosticMsg>
            m_baseNodeDiagnostics;
        std::vector<fast::rf::messages::InfrastructureMsgs::DiagnosticMsg> diagnostics_;
        fast::rf::messages::InfrastructureMsgs::ReadyToArmStatusMsg ready_to_arm_;

        std::mutex m_timingDiagnosticMutex;
    };
}  // namespace fast::rf_ros
