' @compare_tag Node-ClassDiagram v0.1
@startuml
title ServoHat Node Class Diagram
namespace robot_framework_ros {
    class BaseNode
    class arm_command <<(M,#FFFF00)>> <<ROS>>
}
namespace fast::rf {
    namespace BaseMachineSystem {
        namespace BaseMachineSubsystem {
            namespace HatDriver {
                class ServoHatProcess
            }
        }
    }
}
namespace fast::rf_ros {
   namespace BaseMachineSystem {
        namespace BaseMachineSubsystem {
            package HatDriver #LightYellow;line:blue {
                class ServoHatNode #LimeGreen {
                    -ServoHatProcess process
                }
                ServoHatNode --> ServoHatProcess: <<use>>
                ServoHatNode -up-|> BaseNode
            }
        }
    }
}
@enduml
        
